fix mini heart animation on mobile

--- a/style.css
+++ b/style.css
@@ -140,9 +140,8 @@ h1 {
    height: 35px;
    z-index: 1;
    opacity: 0;
-   transition: 0.3s;
+   transition: 0.6s;
 }
-
 
 @media screen and (max-width: 768px) {
    .heart {
@@ -181,5 +180,9 @@ h1 {
 @media screen and (max-width: 576px) {
    h1 {
       font-size: 40px;
+   }
+
+   .mobile-none {
+      display: none;
    }
 }
